# arithmatoy-base

./: CMakeLists.txt
src/: arithmatoy.c
tests/: tp.py
